Adding kidbright data getting hourly average
